# dep_graph

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
dep_graph/: __main__.py  create_dummy_file.py  graph_resolver.py  visualizations.py
tests/: test_dependency_resolver.py  test_resolved_graph.py
tests/mock_data/: circular_deps.json  missing_deps.json  resolved_valid_deps.json
